<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.naphisaporn.application.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Doberman Pincher"
            android:textColor="#008e76"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/doberman"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="18dp"
            android:src="@drawable/doberman" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/doberman"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="characteristic"
                android:textColor="#00b0ff"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkbox_friendly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onCheckboxClicked"
                android:text="@string/friendly" />

            <CheckBox
                android:id="@+id/checkbox_clever"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/clever" />

            <CheckBox
                android:id="@+id/checkbox_energy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/more_energy" />

            <CheckBox
                android:id="@+id/checkbox_brave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/brave" />

            <CheckBox
                android:id="@+id/checkbox_loyal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/loyal" />

            <CheckBox
                android:id="@+id/checkbox_awake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/awake" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="History"
                android:textColor="#00b0ff"
                android:textSize="30sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_germany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="from Germany" />

                <RadioButton
                    android:id="@+id/radio_america"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="from America" />

            </RadioGroup>

            <TextView
                android:id="@+id/textview2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="German Sheped"
                android:textColor="#008e76"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/shepherd"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="18dp"
                android:src="@drawable/shepherd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="characteristic"
                android:textColor="#00b0ff"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkbox_friendly2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onCheckboxClicked"
                android:text="@string/friendly" />

            <CheckBox
                android:id="@+id/checkbox_clever2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/clever" />

            <CheckBox
                android:id="@+id/checkbox_energy2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/more_energy" />

            <CheckBox
                android:id="@+id/checkbox_brave2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/brave" />

            <CheckBox
                android:id="@+id/checkbox_loyal2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/loyal" />

            <CheckBox
                android:id="@+id/checkbox_awake2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/awake" />

            <CheckBox
                android:id="@+id/checkbox_canny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/canny" />

            <CheckBox
                android:id="@+id/checkbox_curious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/curious" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="History"
                android:textColor="#00b0ff"
                android:textSize="30sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_germany2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="from Germany" />

                <RadioButton
                    android:id="@+id/radio_america2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="from America" />

                <RadioButton
                    android:id="@+id/radio_thai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="from Thailand" />

            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector"
                android:text="Thank you" />

        </LinearLayout>

    </RelativeLayout>


</ScrollView>